crates/mabo-parser/tests/inputs/invalid/enum_name.mabo
enum sample {
    One @1,
}
